# scheduled-messenger

./: .clang-format  .eslintrc  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  build.sh  clang-format  create_database_schema.sql  insert_example_message.sql  lerna.json  package-lock.json  package.json  tsconfig.json  vitest.config.js
infrastructure/: README.md  app.ts  cdk.context.json  cdk.json  package-lock.json  package.json  tsconfig.json
infrastructure/cppLambdas/: CMakeLists.txt  main.cpp
infrastructure/src/: app.ts  appConfig.ts
infrastructure/src/common/: lambdaPathFactory.ts  nodejsLambdaFunction.ts
infrastructure/src/config/: appConfig.ts  envKey.ts
infrastructure/src/stacks/messagesProcessing/: messagesProcessingStack.ts
infrastructure/src/stacks/messenger/: messengerStack.ts
infrastructure/src/stacks/rds/: rdsStack.ts
infrastructure/src/stacks/restApi/: restApiStack.ts
infrastructure/stacks/: databaseStack.ts
infrastructure/stacks/messenger/: messengerStack.ts
infrastructure/stacks/rds/: rdsStack.ts
infrastructure/stacks/vpc/: vpcStack.ts
messagesProcessing/: CMakeLists.txt
messagesProcessing/deleteMessage/: CMakeLists.txt  DatabaseConfig.h  DatabaseConnector.h  DeleteMessageCommand.h  DeleteMessageCommandImpl.cpp  DeleteMessageCommandImpl.h  DeleteMessageCommandImplTest.cpp  Main.cpp  MessageRepository.h  MessageRepositoryImpl.cpp  MessageRepositoryImpl.h  MessageRepositoryMock.h
messagesProcessing/sendMessages/: CMakeLists.txt  Config.h  DatabaseConnector.cpp  DatabaseConnector.h  DateService.h  DateServiceImpl.cpp  DateServiceImpl.h  DateServiceImplTest.cpp  DateServiceMock.h  DateTime.h  EmailReceiver.h  EmailSender.h  Endpoint.h  EnvParser.cpp  EnvParser.h  EventSender.h  EventSenderImpl.cpp  EventSenderImpl.h  EventSenderMock.h  HostResolver.h  HostResolverImpl.cpp  HostResolverImpl.h  HostResolverImplTest.cpp  HostResolverMock.h  IsDateWithinRecurringTimePeriodPayload.h  MailioClient.cpp  MailioClient.h  Main.cpp  Message.h  MessageRepository.h  MessageRepositoryImpl.cpp  MessageRepositoryImpl.h  MessageRepositoryMock.h  RepeatedBy.h  RepeatedByMapperImpl.h  SendEmailPayload.h  SendEventPayload.h  SendMessagesCommandImpl.cpp  SendMessagesCommandImpl.h  SendMessagesCommandImplTest.cpp  (+2 more)
messagesProcessing/sendMessages/exceptions/: AwsEventSendError.h  EmailRequiredFieldsNotProvidedError.h  EnvParseError.h  MailioClientError.h  RepeatedByMappingNotFoundError.h
restApi/: package.json  tsconfig.build.json  vitest.config.js
restApi/src/: index.ts
restApi/src/common/postgres/: queryBuilder.ts  queryBuilderConfig.ts  queryBuilderFactoryImpl.ts
restApi/src/common/validator/: decorators.ts
restApi/src/common/validator/errors/: validationError.ts
restApi/src/domain/message/: message.ts  messageEntity.ts  repeatBy.ts
restApi/src/domain/message/commands/: createMessageCommand.ts  createMessageCommandImpl.test.ts  createMessageCommandImpl.ts  deleteMessageCommand.ts  deleteMessageCommandImpl.test.ts  deleteMessageCommandImpl.ts
restApi/src/domain/message/mappers/: messageMapper.ts  messageMapperImpl.test.ts  messageMapperImpl.ts
restApi/src/domain/message/queries/: findMessagesQuery.ts  findMessagesQueryImpl.test.ts  findMessagesQueryImpl.ts
restApi/src/domain/message/repositories/: messageRepository.ts  messageRepositoryImpl.ts
restApi/src/domain/recipient/: recipient.ts  recipientEntity.ts
restApi/src/domain/recipient/commands/: createRecipientCommand.ts  createRecipientCommandImpl.test.ts  createRecipientCommandImpl.ts
restApi/src/domain/recipient/mappers/: recipientMapper.ts  recipientMapperImpl.test.ts  recipientMapperImpl.ts
restApi/src/domain/recipient/repositories/: recipientRepository.ts  recipientRepositoryImpl.ts
restApi/src/domain/user/: user.ts  userEntity.ts
restApi/src/domain/user/commands/: loginUserCommandImpl.test.ts  loginUserCommandImpl.ts  registerUserCommand.ts  registerUserCommandImpl.test.ts  registerUserCommandImpl.ts
restApi/src/domain/user/errors/: userNotFoundError.ts
restApi/src/domain/user/mappers/: userMapperImpl.test.ts  userMapperImpl.ts
restApi/src/domain/user/queries/: verifyAccessTokenQuery.ts  verifyAccessTokenQueryImpl.test.ts  verifyAccessTokenQueryImpl.ts
restApi/src/domain/user/repositories/: userRepository.ts
restApi/src/domain/users/: user.ts
restApi/src/errors/: applicationError.ts
restApi/src/postgres/: queryBuilderFactory.ts  queryBuilderFactoryImpl.ts
restApi/src/tests/factories/: dummyFactory.ts  messageEntityTestFactory.ts  messageTestFactory.ts  recipientEntityTestFactory.ts  recipientTestFactory.ts  spyFactory.ts  userEntityTestFactory.ts  userTestFactory.ts
restApi/src/validator/: validator.ts
src/: CMakeLists.txt  DatabaseConfig.h  DatabaseConnector.cpp  DatabaseConnector.h  DateService.cpp  DateService.h  DateServiceImpl.cpp  DateServiceImpl.h  DateServiceImplTest.cpp  DateServiceTest.cpp  EmailClient.h  EmailClientMock.h  IsDateWithinRecurringTimePeriodPayload.h  MailClient.h  MailClientMock.h  MailioClient.cpp  MailioClient.h  Main.cpp  Message.h  MessageRepository.h  MessageRepositoryImpl.cpp  MessageRepositoryImpl.h  MessageRepositoryMock.h  Recipient.h  RepeatedByMapper.h  RepeatedByMapperImpl.cpp  RepeatedByMapperImpl.h  SendEmailPayload.h  SendMessagesCommand.h  SendMessagesCommandImpl.cpp  SendMessagesCommandImpl.h  SendMessagesCommandImplTest.cpp  User.h  main.cpp
src/exceptions/: MailioClientError.h
(+52 files in other folders)
